# SmartModelOnMcu

./: SmartModelOnMcu.sln
model_training/: extended_model_setup.ipynb
model_training/runs_mnist_opt/: MNIST_Optimization_Report.md  conv_baseline_s0_cls_report.txt  conv_baseline_s0_cm.npy  conv_baseline_s0_history.csv  conv_cluster-8_s0_cls_report.txt  conv_cluster-8_s0_cm.npy  conv_prune-0.8_s0_cls_report.txt  conv_prune-0.8_s0_cm.npy  conv_qat_s0_cls_report.txt  conv_qat_s0_cm.npy  dscnn_baseline_s0_cls_report.txt  dscnn_baseline_s0_cm.npy  dscnn_baseline_s0_history.csv  dscnn_cluster-8_s0_cls_report.txt  dscnn_cluster-8_s0_cm.npy  dscnn_kd_s0_cls_report.txt  dscnn_kd_s0_cm.npy  dscnn_prune-0.8_s0_cls_report.txt  dscnn_prune-0.8_s0_cm.npy  dscnn_qat_s0_cls_report.txt  dscnn_qat_s0_cm.npy  results.csv
native_tflite/: CMakeLists.txt  platformio.ini
native_tflite/models/: dscnn_baseline.tflite  dscnn_cluster.tflite  dscnn_kd.tflite  dscnn_prune.tflite  dscnn_qat.tflite
native_tflite/src/: CMakeLists.txt  model_c_array.cc  model_data.h  tflite_infer_main.cpp
native_tflite/src/byte_arrays/: dscnn_baseline.cc  dscnn_cluster.cc  dscnn_kd.cc  dscnn_prune.cc  dscnn_qat.cc
native_tflite/src/include/: all_ground_truth_mnist.h  example_mnist.h  ground_truth_mnist.h
wamr_benchmarks/: CMakeLists.txt
wamr_benchmarks/main/: CMakeLists.txt  alg_native.c  bench_harness.c  bench_harness.h  idf_component.yml  main.c  wamr_host.c  wasm_module_bytes.c  wasm_module_bytes.h
wamr_esp/: readme.md
wamr_esp/backup/: test.wasm
wamr_esp/main/: CMakeLists.txt  main.c  test.wasm
(+46 files in other folders)
